# HNGx-rusty

./: README.md
stage-01/: Cargo.toml  README.md
stage-01/src/: data.rs
stage-02/: Cargo.toml  rustfmt.toml
stage-02/migrations/2023-09-15-125253_create_people/: up.sql
stage-02/src/: controllers.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
stage-one/src/: data.rs  main.rs
