[package]
name = "hngx-uno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["query"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
time = { version = "0.3.28", features = ["formatting", "serde"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
