[package]
name = "hngx-duo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["query"] }
diesel = { version = "2.1.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
